--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">من نحن</a>
+                <a class="nav-link" href="#about_us">من نحن</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">خدماتنا</a>
+                <a class="nav-link" href="#services">خدماتنا</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">الفريق</a>
+                <a class="nav-link" href="#work_team">الفريق</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> تواصل معنا</a>
+                <a class="nav-link" href="#contact_us"> تواصل معنا</a>
               </li>
             </ul>
           </div>
@@ -122,7 +122,8 @@
         </button>
       </div>
     </header>
-    <div class="container about-us-container">
+    <!-- start about us -->
+    <div id="about_us" class="container about-us-container">
       <div class="row align-items-center">
         <div class="col-md-6">
           <h3>من نحن</h3>
@@ -142,7 +143,7 @@
       </div>
     </div>
     <!-- start subscriber -->
-    <div class="subscriber-container">
+    <div id="subscriber" class="subscriber-container">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4">
@@ -171,8 +172,9 @@
         </div>
       </div>
     </div>
-    <!-- end subscriber -->
-    <div class="container services">
+
+    <!-- start services -->
+    <div id="services" class="container services">
       <h3 class="text-primary text-center fw-bold">خدماتنا</h3>
       <div class="d-flex align-items-center justify-content-center">
         <div class="line"></div>
@@ -279,7 +281,8 @@
         </div>
       </div>
     </div>
-    <div class="work-team">
+    <!-- start work team -->
+    <div id="work_team" class="work-team">
       <div class="container">
         <h3 class="text-primary text-center fw-bold">فريق العمل</h3>
         <div class="d-flex align-items-center justify-content-center">
@@ -558,7 +561,7 @@
               </div>
             </div>
           </div>
-          <form class="row">
+          <form id="contact_us" class="row">
             <div class="col-md-6 mt-3">
               <div class="input-group">
                 <span class="input-group-text" id="basic-addon1">
