--- a/user-details..html
+++ b/user-details..html
@@ -85,9 +85,10 @@
       <div class="card card-details mb-3">
         <div class="row no-gutters">
          
-          <div class="col-md-6">
+          <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title h3">تنظيــم ومـســك السـجـلات والدفاتر المحاسية          </h5>
+              <h5 class="card-title h3">Dr. Muna. Alsheleh</h5>
+              <p class="card-text"><small class="text-muted">مستشار في الشؤون المالية</small></p>
               <p class="card-text">
                 هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
                 إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.
@@ -95,11 +96,25 @@
            <!--    <p class="card-text">
                 <small class="text-muted">Last updated 3 mins ago</small>
               </p> -->
+              
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-4">
             <img class="w-100" src="img/img_service1.png" alt="..." />
           </div>
+          <div>
+                <div class="social-container d-flex">
+                  <a href="#">
+                    <i class="ri-mail-fill"></i>
+                  </a>
+                  <a href="#">
+                    <i class="ri-instagram-line"></i>
+                  </a>
+                  <a href="#">
+                    <i class="ri-twitter-fill"></i>
+                  </a>
+                </div>
+              </div>
         </div>
       </div>
     </div>
@@ -203,6 +218,7 @@
 
         <div class="dots d-flex justify-content-center mt-3"></div>
       </div>
+
     <footer>
       <div class="row w-100">
         <div class="col-lg-4 right-side">
