--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
                 </div>
                 <div class="card-body">
                   <div class="card-subtitle mb-2 text-muted text-start">
-                    <small>الامارات - أبو ظبي</small>
+                    <small>الامارات - أبو ظبي 🇦🇪</small>
                   </div>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
                 </div>
                 <div class="card-footer">
                   <div class="social-container d-flex">
-                <!--     <a href="#">
+                    <a href="#">
                       <i class="ri-mail-fill"></i>
                     </a>
                     <a href="#">
@@ -330,7 +330,7 @@
                     </a>
                     <a href="#">
                       <i class="ri-twitter-fill"></i>
-                    </a> -->
+                    </a>
                   </div>
                 </div>
               </div>
@@ -358,7 +358,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-container d-flex">
-                 <!--    <a href="#">
+                    <a href="#">
                       <i class="ri-mail-fill"></i>
                     </a>
                     <a href="#">
@@ -366,7 +366,7 @@
                     </a>
                     <a href="#">
                       <i class="ri-twitter-fill"></i>
-                    </a> -->
+                    </a>
                   </div>
                 </div>
               </div>
@@ -394,7 +394,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="social-container d-flex">
-                  <!--   <a href="#">
+                    <a href="#">
                       <i class="ri-mail-fill"></i>
                     </a>
                     <a href="#">
@@ -402,7 +402,7 @@
                     </a>
                     <a href="#">
                       <i class="ri-twitter-fill"></i>
-                    </a> -->
+                    </a>
                   </div>
                 </div>
               </div>
@@ -431,7 +431,7 @@
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
                 </div>
                
-                <!-- <div class="card-footer">
+                <div class="card-footer">
                   <div class="social-container d-flex">
                     <a href="#">
                       <i class="ri-mail-fill"></i>
@@ -443,7 +443,7 @@
                       <i class="ri-twitter-fill"></i>
                     </a>
                   </div>
-                </div> -->
+                </div>
               </div>
             </div>
           </div>
