--- a/user-details..html
+++ b/user-details..html
@@ -93,17 +93,9 @@
                 هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
                 إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم الموقع.
               </p>
-           <!--    <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p> -->
-              
-            </div>
-          </div>
-          <div class="col-md-4">
-            <img class="w-100" src="img/img_service1.png" alt="..." />
-          </div>
-          <div>
+              <div class="user-details">
                 <div class="social-container d-flex">
+                  <span>تواصل الآن :</span>
                   <a href="#">
                     <i class="ri-mail-fill"></i>
                   </a>
@@ -114,10 +106,96 @@
                     <i class="ri-twitter-fill"></i>
                   </a>
                 </div>
-              </div>
+            </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <img class="w-100" src="img/img_service1.png" alt="..." />
+          </div>
+          
         </div>
       </div>
     </div>
+    <section id="pricing" class="pricing-content section-padding">
+      <div class="container">					
+        <div class="section-title text-center">
+          <h1>أسعار الخطط</h1>
+          <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل هذا النص</p>
+        </div>					
+        <div class="row text-center">									
+          <div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
+            <div class="single-pricing">
+              <div class="price-head">								
+                <h2>البرونزية</h2>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <h1 class="price">$29</h1>
+              <h5>شهرياً</h5>
+              <ul>
+                <li>5 website</li>
+                <li>50GB Disk Space</li>
+                <li>50 Email Accounts</li>
+              </ul>
+              <a href="#">ابدأ الآن</a>
+            </div>
+          </div><!--- END COL -->	
+          <div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
+            <div class="single-pricing">
+              <div class="price-head">								
+                <h2>الفضية</h2>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <h1 class="price">$49</h1>
+              <h5>شهرياً</h5>
+              <ul>
+                <li>10 website</li>
+                <li>50GB Disk Space</li>
+                <li>50 Email Accounts</li>
+                <li>50GB Monthly Bandwidth</li>
+                <li>10 Subdomains</li>
+              </ul>
+              <a href="#">ابدأ الآن</a>
+            </div>
+          </div><!--- END COL -->	
+          <div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0">
+            <div class="single-pricing single-pricing-white">
+              <div class="price-head">								
+                <h2>الذهبية</h2>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+              <span class="price-label">الأفضل</span>
+              <h1 class="price">$69</h1>
+              <h5>شهرياً</h5>
+              <ul>
+                <li>15 website</li>
+                <li>50GB Disk Space</li>
+                <li>50 Email Accounts</li>
+                <li>50GB Monthly Bandwidth</li>
+                <li>10 Subdomains</li>
+                <li>15 Domains</li>
+                <li>Unlimited Support</li>
+              </ul>
+              <a href="#">ابدأ الآن</a>
+            </div>
+          </div><!--- END COL -->			  
+        </div><!--- END ROW -->
+      </div><!--- END CONTAINER -->
+    </section>
       <!-- start work team -->
       <div  class="work-team">
         <div class="container-btn-controller">
