--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 </div>
                 <div class="card-body">
                   <div class="card-subtitle mb-2 text-muted text-start">
-                    <small>الامارات - أبو ظبي 🇦🇪</small>
+                    <span dir="ltr">🇦🇪</span>
                   </div>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
