--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 </div>
                 <div class="card-body">
                   <p class="card-text mb-2 ">
-                    <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                    <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                   </p>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -352,7 +352,7 @@
                 </div>
                 <div class="card-body">
                   <p class="card-text mb-2 ">
-                    <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                    <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                   </p>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -389,7 +389,7 @@
                 </div>
                 <div class="card-body">
                   <p class="card-text mb-2 ">
-                    <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                    <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                   </p>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -427,7 +427,7 @@
                 
                 <div class="card-body">
                   <p class="card-text mb-2 ">
-                    <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                    <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                   </p>
                   <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                   
