--- a/user-details.html
+++ b/user-details.html
@@ -231,7 +231,7 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text mb-2 ">
-                      <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                      <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                     </p>
                     <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                     <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -268,7 +268,7 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text mb-2 ">
-                      <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                      <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                     </p>
                     <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                     <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -305,7 +305,7 @@
                   </div>
                   <div class="card-body">
                     <p class="card-text mb-2 ">
-                      <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                      <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                     </p>
                     <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                     <p class="card-text job-staff">مستشار في الشؤون المالية</p>
@@ -343,7 +343,7 @@
                   
                   <div class="card-body">
                     <p class="card-text mb-2 ">
-                      <small ><img src="https://flagcdn.com/24x18/ae.png" alt="" srcset=""></small>
+                      <small ><img src="https://flagcdn.com/w40/ae.png" class="flag" alt="" srcset=""></small>
                     </p>
                     <p class="card-text name-staff">Dr. Muna. Alsheleh</p>
                     
